# Phi-Backend

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  REFACTORING_PLAN.md  docker-compose.yml
.github/workflows/: auto-publish.yml  auto-release.yml  auto-version-bump.yml  build_and_deploy.yml  manual-release.yml  release.yml  version-bump.yml
.sqlx/: query-00d7a18f94adc775868d50ee9fb4bfecdb6f40b3aeb561ae07e3d7bd32c1c915.json  query-35d528462c6d0d0615bd9dbe35b0b8fb5662715895dcff495448d315106ccc1e.json  query-3ea7d2af56b57a4c8872630652797c6c9c2b0b80e25e2daaa6df4b4582b036c2.json  query-411faa540b6f5296efdd74f772bfd9f99239d2f4c1bae30be34b3f89aef122c6.json  query-5ab6d775eab578f3ec9a3964d1bb3bf66507cc9cc93c7dca960c2a2f5352c469.json  query-6948d7e2ccbac9f5b2456dd2d06f368f196eeb6213374dd2242e7032f0d12c22.json  query-69ab1f7aed1b606b481560de59d8443f3dac71d89c94d51dfb617ba69849797d.json  query-6cc1197d435070ffe48a3fe0214d9795664b656d79495d38508455a441bf2fcf.json  query-8c55962979770049f4f78c692b9cdfc2b1a41692702ab536988474064738a4c8.json  query-92c6151443d0d8e041d5a7113f08415afe67519a8ed78bec7aa49192475b02f9.json  query-a258f2d67bd5ebea8d2064f4312c13e614b5ebd4e7e6022fd6c42274d36b4140.json  query-b07dfc804810587d9e8ad4fc532f55184346dcef2f51697de10e5c99fcc7a419.json  query-bf0d92e24c18d7cc7dfe83be55ec279a559be2941c2105de4b84c5a5f4599d7f.json  query-d02d0fbb307a5e36fc3de50094bd3193502ebdf4cf271bc8353a8b594059a0f9.json  query-d1cf2317eaf73e8f191458eac9d6095368fcd92218d12f15ea0e38dbaa28f2b3.json  query-d9cd75d7dd15ca9f4cb62552143339c4e63a0469f2f03a4012951dc10170260d.json  query-e17832bd8ff537e59094f4218e69a6877a860d7a80297f133c3328610733b3e4.json  query-e704ae96ea44f572e0da08e48eaa4ac594090ac3105cc21ee34dff23b0c5e52a.json  query-f892a8b7f9d64ddaf07322a01bef196a77d31e713889b15f592a7c8b5bff55aa.json  query-fb86ed145c7f869ce3eb8b5b33b327ecbf06237c0f55180ccf9cb11ad602c4fa.json
Phi-Backend/.github/workflows/: manual-release.yml
info/: avatar.txt  chart_predictions_wide.csv  difficulty.csv  help.json  illustration.txt  info.csv  single.txt
migrations/: 20250429212335_create_initial_tables.sql  20250430072540_create_push_acc_cache.sql  20250819095500_add_index_to_chart_scores_player_id.sql  20250820150000_create_image_counter_table.sql
src/: main.rs  routes.rs
src/config/: mod.rs
src/controllers/: auth.rs  auth_controller.rs  b30.rs  binding.rs  binding_controller.rs  bn.rs  health.rs  image.rs  image_controller.rs  mod.rs  rks.rs  rks_controller.rs  save.rs  save_controller.rs  song.rs  song_controller.rs  status.rs
src/models/: b30.rs  cloud_save.rs  image_counter.rs  mod.rs  player_archive.rs  predictions.rs  rks.rs  save.rs  song.rs  user.rs
src/routes/: image_routes.rs  mod.rs  rks_routes.rs  save_routes.rs  song_routes.rs
src/services/: image_service.rs  leancloud.rs  mod.rs  phigros.rs  player_archive_service.rs  song.rs  taptap.rs  user.rs
src/utils/: aes_decrypt.rs  config.rs  cover_loader.rs  crypto.rs  data_loader.rs  error.rs  image_renderer.rs  mod.rs  rks_utils.rs  save_parser.rs  token_helper.rs
