[package]
name = "phi-backend-rust"
version = "1.3.13"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.4.0"
actix-cors = "0.6.4"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 加密和解密
aes = "0.8.3"
base64 = "0.21.0"
md-5 = "0.10.5"
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4"
block-padding = "0.3.3"
cipher = "0.4.0"
hmac = "0.12"
sha1 = "0.10"

# 二维码生成
qrcode = { version = "0.14", features = ["image"] }

# 二进制数据处理
byteorder = "1.4"

# 压缩和解压
zip = "0.6.6"
flate2 = "1.0.28"

# 异步
tokio = { version = "1", features = ["full"] }
# futures = "0.3"

# 工具库
lazy_static = "1.4.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10.0"
dotenv = "0.15.0"
csv = "1.2.2"

# 数据库
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono" ] }

# Added from the code block
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# 图像处理 (基础库仍需要)
image = "0.24"
# urlencoding = "2.1"
# url = "2.3"

# Git 操作
git2 = "0.18"

# SVG 渲染
resvg = "0.41"
# itertools = "0.14.0"
percent-encoding = "2.3.1"
# tiny-skia = "0.11"
# usvg = "0.37"

# 并行计算
rayon = "1.10.0"

# 缓存
moka = { version = "0.12", features = ["future"] }
askama = "0.12"
lru = "0.12"

# API文档
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }

[features]
default = []

# 添加 release 配置以包含调试信息
[profile.release]
debug = true

[package.metadata.cargo-machete]
ignored = ["md-5"]