[package]
name = "phi-backend-rust"
version = "1.5.5"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.11.0"
actix-cors = "0.7.1"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP客户端
reqwest = { version = "0.12", features = ["json"] }

# 加密和解密
aes = "0.8.4"
base64 = "0.22.1"
md-5 = "0.10.6"
cbc = { version = "0.1.2", features = ["std"] }
hex = "0.4"
block-padding = "0.3.3"
cipher = "0.4.4"
hmac = "0.12"
sha1 = "0.10"

# 二维码生成
qrcode = { version = "0.14", features = ["image"] }

# 二进制数据处理
byteorder = "1.5"

# 压缩和解压
zip = "4.5.0"
flate2 = "1.1.2"

# 异步
tokio = { version = "1", features = ["full"] }

# 工具库
lazy_static = "1.5.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
dotenv = "0.15.0"
csv = "1.3.1"

# 数据库
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono" ] }

# Added from the code block
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
rand = { version = "0.9.2", features = ["small_rng"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

# 图像处理 (基础库仍需要)
image = { version = "0.25", features = ["png", "jpeg"] }

# Git 操作
git2 = "0.20"

# SVG 渲染
resvg = "0.45"
percent-encoding = "2.3.2"

# 并行计算
rayon = "1.11.0"

# 缓存
moka = { version = "0.12", features = ["future"] }
lru = "0.16"

# 异步流处理
futures = "0.3"

# API文档
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
once_cell = "1.21.3"
num_cpus = "1.16.0"

[features]
default = []

[profile.release]

[profile.release-with-debug]
inherits = "release"
debug = true

# cargo-machete 的配置。如果没有任何需要忽略的依赖，此部分可以完全删除。
[package.metadata.cargo-machete]
ignored = []
